# widget_library

./: .gitignore  CMakeLists.txt
src/: entry.cpp
src/app/: manager.cpp  manager.h  window_manager.cpp  window_manager.h
src/widget/: base_widget.cpp  base_widget.h
src/widget/attr/: color.h  transform.h
src/widget/container/: h_container.cpp  h_container.h
src/widget/rect/: rect.cpp  rect.h
src/widgets/: base_widget.cpp  base_widget.h  color.h  rect_widget.cpp  rect_widget.h  transform.h
